--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,27 @@ html{
 .navbar .menu li a:hover{
     color: crimson;
 }
+
+/* all similar content styling */
+section{
+    padding: 100px 0;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #000;
+    transform: translateX(-50%);
+
+}
