--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,49 @@ html{
     color: crimson;
 }
 
+/* Home section styling */
+.home{
+    display: flex;
+    color: #000;
+    min-height: 500px;
+    background: gray;
+    height: 670px;
+}
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 40px;
+    font-weight: 300;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 35px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: crimson;
+    font-weight: 500;
+}
+.home .home-content a{
+    display: inline-block;
+    color: #fff;
+    background: crimson;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.home .home-content a:hover{
+    color: #fff;
+    background: none;
+}
+
 /* all similar content styling */
 section{
     padding: 100px 0;
