--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ html{
 .navbar .menu li a:hover{
     color: crimson;
 }
-
 /* Home section styling */
 .home{
     display: flex;
@@ -92,7 +91,6 @@ html{
     color: #fff;
     background: none;
 }
-
 /* all similar content styling */
 section{
     padding: 100px 0;
@@ -116,7 +114,19 @@ section .title::before{
     transform: translateX(-50%);
 
 }
-* about section styling */
+section .title::after{
+    position: absolute;
+    bottom: -12px;
+    color: crimson;
+    font-size: 20px;
+    left: 50%;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+
+}
+
+/* about section styling */
 .about{
     height: 670px;
     padding-top: 62px;
