--- a/css/styles.css
+++ b/css/styles.css
@@ -180,3 +180,48 @@ section .title::after{
     color: crimson;
     background: none;
 }
+
+/*service section styling*/
+.service{
+    background: #111;
+    color: #fff;
+    height: 670px;
+    padding-top: 62px;
+}
+.service .title::before{
+    background: #fff;
+}
+.service .title::after{
+    background: #111;
+    content: "what i provide";
+}
+.service .service-content .card{
+    width: 24%;
+    height: 160px;
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+}
+.service .service-content .card:hover{
+    background: crimson;
+}
+.service .service-content .card .box{
+    transition: all 0.3s ease;
+}
+.service .service-content .card:hover .box{
+    transform: scale(1.05);
+}
+.service .service-content .card i{
+    font-size: 20px;
+    color: crimson;
+}
+.service .service-content .card:hover i{
+    color: #fff;
+}
+.service .service-content .card .text{
+    font-size: 19px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
