--- a/css/styles.css
+++ b/css/styles.css
@@ -225,3 +225,90 @@ section .title::after{
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
+
+/* skill section styling */
+.skills .title::after{
+    content: "What i Know";
+}
+.skills .skills-content .column, .contact .contact-content .column{
+    width: 50%;
+}
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p{
+    text-align: justify;
+    width: 90%;
+}
+.skills .skills-content .left a{
+    display: inline-block;
+    color: #fff;
+    background: crimson;
+    font-size: 15px;
+    padding: 10px 10px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.skills .skills-content .left a:hover{
+    background: none;
+    color: brown;
+}
+.skills .skills-content .right .bars{
+    margin-bottom: 10px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span{
+    font-weight: 600;
+    font-size: 15px;
+}
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: crimson;
+}
+.skills .skills-content .right .html::before{
+    width: 90%;
+}
+.skills .skills-content .right .css::before{
+    width: 60%;
+}
+.skills .skills-content .right .javascript::before{
+    width: 60%;
+}
+.skills .skills-content .right .py::before{
+    width: 50%;
+}
+.skills .skills-content .right .php::before{
+    width: 80%;
+}
+.skills .skills-content .right .mysql::before{
+    width: 90%;
+}
+.skills .skills-content .right .cs::before{
+    width: 70%;
+}
+.skills .skills-content .right .django::before{
+    width: 55%;
+}
+.skills .skills-content .right .cshtml::before{
+    width: 67%;
+}
