--- a/css/styles.css
+++ b/css/styles.css
@@ -408,3 +408,91 @@ footer{
     color: #fff;
     text-align: center;
 }
+
+/* responsive query start */
+@media (max-width: 500px){
+    .navbar .menu li a{
+         display: block;
+         padding: 2px;
+     }
+     
+     .navbar .logo a{
+         font-size: 25px;
+     }
+    .home .max-width{
+         margin: 150px 0px ;
+     }
+     .service .service-content .card{
+        width: 100%;
+      
+    }
+    .home .home-content a{
+        font-size:15px;
+        padding:10px 10px;
+    }
+}
+@media(max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .service .service-content .card{
+        flex: 100%;
+    }
+}
+
+@media (max-width: 947px){
+     .max-width{
+       max-width: 800px;
+    }
+    .navbar .menu{
+        display: inline;
+    }
+    .navbar .menu li{
+        font-size: 5px;
+    }
+    .navbar .menu li a{
+        font-size: 15px;
+    }
+    .home .home-content .text-2{
+         font-size: 25px;
+    
+    }
+.home .home-content .text-3{
+         font-size: 15px;
+   
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+    }
+    .service .service-content .card{
+        width: 49%;
+        margin-bottom: 20px;
+    }
+    .skills .skills-content .column, .contact .contact-content .column{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+
+
+
+ 
+@media (max-width: 1111px){
+    .about .about-content .column{
+        width: calc(50% - 10px);
+    }
+}
+@media (max-width: 1304px){
+    .about .about-content .column{
+        width: 50%;
+    }
+}
